tests/0006-assignment-infix-operator.src.err
ERROR: unexpected infix operation
 | a + b = "value";
         ^
